--- a/Copy_of_FMML_M1L1.ipynb
+++ b/Copy_of_FMML_M1L1.ipynb
@@ -269,24 +269,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "oU_WEhZcG_UQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Je1qv2xuHAtt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "jXFTWwd0rk63"
@@ -576,11 +558,10 @@
       "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 384
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_HeWNh_q0QZ1",
-        "outputId": "a997ed39-f047-415d-dc11-f6100f3eacbe"
+        "outputId": "8a87d334-f681-461d-a36a-53ee0525db14"
       },
       "outputs": [
         {
@@ -588,18 +569,53 @@
           "name": "stdout",
           "text": [
             "\n",
-            "English 1:\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'ShowTopN' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-5932cccc2644>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\nEnglish 1:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mShowTopN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbigram_eng1_freq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\nEnglish 2:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mShowTopN\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbigram_eng2_freq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'ShowTopN' is not defined"
+            "English 1:\n",
+            "('t', 'h') : 814.0\n",
+            "('h', 'e') : 694.0\n",
+            "('i', 'n') : 597.0\n",
+            "('e', 's') : 570.0\n",
+            "('a', 'n') : 539.0\n",
+            "('r', 'e') : 450.0\n",
+            "('e', 'r') : 446.0\n",
+            "('r', 'a') : 400.0\n",
+            "('a', 'l') : 392.0\n",
+            "('n', 'd') : 375.0\n",
+            "\n",
+            "English 2:\n",
+            "('t', 'h') : 1223.0\n",
+            "('a', 'n') : 1125.0\n",
+            "('h', 'e') : 971.0\n",
+            "('i', 'n') : 864.0\n",
+            "('e', 'r') : 627.0\n",
+            "('r', 'e') : 596.0\n",
+            "('l', 'e') : 594.0\n",
+            "('n', 'd') : 562.0\n",
+            "('h', 'a') : 554.0\n",
+            "('n', 't') : 540.0\n",
+            "\n",
+            "French 1:\n",
+            "('e', 's') : 641.0\n",
+            "('l', 'e') : 428.0\n",
+            "('d', 'e') : 385.0\n",
+            "('e', 'n') : 367.0\n",
+            "('o', 'n') : 346.0\n",
+            "('n', 't') : 317.0\n",
+            "('r', 'e') : 300.0\n",
+            "('l', 'a') : 249.0\n",
+            "('r', 'a') : 233.0\n",
+            "('a', 'n') : 220.0\n",
+            "\n",
+            "French 2:\n",
+            "('e', 's') : 958.0\n",
+            "('n', 't') : 801.0\n",
+            "('d', 'e') : 671.0\n",
+            "('e', 'n') : 646.0\n",
+            "('l', 'e') : 619.0\n",
+            "('a', 'n') : 553.0\n",
+            "('o', 'n') : 493.0\n",
+            "('r', 'e') : 468.0\n",
+            "('l', 'a') : 333.0\n",
+            "('u', 'r') : 311.0\n"
           ]
         }
       ],
@@ -631,124 +647,40 @@
         "A few ways to explore:\n",
         "1. Try with different languages.\n",
         "2. The topics we used are quite similar, wikipedia articles of 'elephant' and 'giraffe'. What happens if we use very different topics? What if we use text from another source than Wikipedia?\n",
-        "A.1. **Using Very Different Topics:**\n",
-        "   - **Topic Modeling:** The model might struggle to find common themes if the topics are vastly different. For example, comparing text on \"Quantum Physics\" with \"Medieval Art\" would yield minimal overlap in vocabulary, concepts, and context.\n",
-        "   - **Text Similarity:** The similarity score between two very different topics will likely be low because the terms and context will differ greatly.\n",
-        "   - **Sentiment Analysis:** The sentiment expressed in two different topics may not be comparable, as they could elicit entirely different emotional responses or be neutral in unrelated ways.\n",
-        "   - **Information Retrieval:** When searching or classifying documents, the retrieval process might need more robust algorithms to handle the diversity in content effectively.\n",
-        "\n",
-        "\n",
         "3. How can we use and visualize trigrams and higher n-grams?\n",
-        "A.Using and visualizing trigrams (three-word sequences) and higher n-grams (sequences of *n* words) can provide deeper insights into text data by capturing more complex patterns and phrases. Here's how you can work with and visualize these n-grams:\n",
+        "A.Trigrams and higher n-grams (like 4-grams, 5-grams, etc.) are useful in natural language processing (NLP) for capturing more context than unigrams (single words) or bigrams (two-word combinations). They can be particularly useful in tasks such as text classification, language modeling, and information retrieval. Here’s how you can use and visualize these n-grams effectively:\n",
         "\n",
-        "### 1. **Extracting Trigrams and Higher N-grams:**\n",
+        "Using Trigrams and Higher N-Grams\n",
+        "Feature Extraction:\n",
         "\n",
-        "To extract trigrams and higher n-grams from text data, you can use various tools and libraries in Python:\n",
+        "Text Representation: Convert text into n-grams as features for machine learning models. For instance, a trigram model would capture sequences of three consecutive words.\n",
+        "Vectorization: Use techniques like Count Vectorizer or TF-IDF Vectorizer to extract n-grams from text data. For example, in Python’s scikit-learn, you can specify ngram_range=(3, 3) for trigrams\n",
         "\n",
-        "- **Using NLTK:**\n",
-        "  ```python\n",
-        "  from nltk import ngrams\n",
-        "  from collections import Counter\n",
-        "  \n",
-        "  text = \"This is a sample text for generating trigrams and higher n-grams.\"\n",
-        "  tokens = text.split()\n",
-        "  trigrams = list(ngrams(tokens, 3))\n",
-        "  trigrams_count = Counter(trigrams)\n",
-        "  ```\n",
+        "Text Generation: Trigrams and higher n-grams can be used in language models to predict the next word based on the previous n-1 words. For example, a trigram model predicts the next word given the previous two words.\n",
+        "Sequence Prediction: In applications like speech recognition or text generation, n-grams help capture the context needed for accurate predictions.\n",
+        "Text Classification:\n",
         "\n",
-        "- **Using Scikit-learn:**\n",
-        "  ```python\n",
-        "  from sklearn.feature_extraction.text import CountVectorizer\n",
-        "  \n",
-        "  vectorizer = CountVectorizer(ngram_range=(3, 3))  # For trigrams only\n",
-        "  text = [\"This is a sample text for generating trigrams and higher n-grams.\"]\n",
-        "  X = vectorizer.fit_transform(text)\n",
-        "  trigrams = vectorizer.get_feature_names_out()\n",
-        "  trigrams_count = X.toarray().sum(axis=0)\n",
-        "  ```\n",
+        "Feature Engineering: N-grams can be used to improve classification tasks by capturing context that single words or bigrams might miss. They can be especially useful for distinguishing between similar documents or understanding nuanced meanings.\n",
+        "Visualizing N-Grams\n",
+        "Frequency Distribution:\n",
         "\n",
-        "- **Using SpaCy:**\n",
-        "  ```python\n",
-        "  import spacy\n",
-        "  from collections import Counter\n",
-        "  from spacy.util import ngrams\n",
-        "  \n",
-        "  nlp = spacy.load('en_core_web_sm')\n",
-        "  doc = nlp(\"This is a sample text for generating trigrams and higher n-grams.\")\n",
-        "  trigrams = list(ngrams(doc, 3))\n",
-        "  trigrams_count = Counter(trigrams)\n",
-        "  ```\n",
+        "Bar Charts: Plot the frequency of n-grams using bar charts to visualize the most common n-grams in a corpus. You can use libraries like matplotlib or seaborn for this.\n",
         "\n",
-        "### 2. **Visualizing N-grams:**\n",
+        "Word Clouds:\n",
         "\n",
-        "#### **a. Word Clouds:**\n",
-        "Word clouds are a popular way to visualize n-grams by displaying them with sizes proportional to their frequency.\n",
+        "Visualization: Create word clouds to visualize the prominence of different n-grams. This can be especially effective for showing the relative importance of various phrases in a corpus.\n",
         "\n",
-        "- **Using `wordcloud` in Python:**\n",
-        "  ```python\n",
-        "  from wordcloud import WordCloud\n",
-        "  import matplotlib.pyplot as plt\n",
-        "  \n",
-        "  wordcloud = WordCloud(width=800, height=400).generate_from_frequencies(trigrams_count)\n",
-        "  plt.figure(figsize=(10, 5))\n",
-        "  plt.imshow(wordcloud, interpolation='bilinear')\n",
-        "  plt.axis('off')\n",
-        "  plt.show()\n",
-        "  ```\n",
+        "Network Graphs:\n",
         "\n",
-        "#### **b. Bar Charts:**\n",
-        "Bar charts can help in visualizing the most common trigrams or higher n-grams.\n",
+        "Relationships: Use network graphs to visualize relationships between n-grams. For instance, nodes could represent n-grams, and edges could represent co-occurrence or similarity.\n",
         "\n",
-        "- **Using Matplotlib or Seaborn:**\n",
-        "  ```python\n",
-        "  import matplotlib.pyplot as plt\n",
-        "  import seaborn as sns\n",
-        "  \n",
-        "  # Convert trigrams back to strings\n",
-        "  trigram_strings = [' '.join(gram) for gram in trigrams_count.keys()]\n",
-        "  trigram_freq = list(trigrams_count.values())\n",
-        "  \n",
-        "  # Sort by frequency\n",
-        "  trigram_freq_sorted = sorted(zip(trigram_strings, trigram_freq), key=lambda x: x[1], reverse=True)\n",
-        "  trigram_strings_sorted, trigram_freq_sorted = zip(*trigram_freq_sorted)\n",
-        "  \n",
-        "  # Plot\n",
-        "  plt.figure(figsize=(10, 5))\n",
-        "  sns.barplot(x=list(trigram_strings_sorted[:10]), y=list(trigram_freq_sorted[:10]))\n",
-        "  plt.xticks(rotation=45, ha='right')\n",
-        "  plt.title('Top 10 Trigrams')\n",
-        "  plt.xlabel('Trigrams')\n",
-        "  plt.ylabel('Frequency')\n",
-        "  plt.show()\n",
-        "  ```\n",
+        "Heatmaps:\n",
         "\n",
-        "#### **c. Networks:**\n",
-        "Network graphs can show how different n-grams connect with each other, particularly useful for visualizing relationships between higher n-grams.\n",
+        "Contextual Analysis: Visualize the co-occurrence of n-grams or their frequency across different documents or segments of text using heatmaps.\n",
         "\n",
-        "- **Using `NetworkX`:**\n",
-        "  ```python\n",
-        "  import networkx as nx\n",
-        "  import matplotlib.pyplot as plt\n",
-        "  \n",
-        "  G = nx.Graph()\n",
-        "  for trigram in trigrams_count:\n",
-        "      G.add_edge(trigram[0], trigram[1], weight=trigrams_count[trigram])\n",
-        "      G.add_edge(trigram[1], trigram[2], weight=trigrams_count[trigram])\n",
-        "  \n",
-        "  plt.figure(figsize=(10, 10))\n",
-        "  pos = nx.spring_layout(G, k=0.5)\n",
-        "  nx.draw_networkx_nodes(G, pos, node_size=500)\n",
-        "  nx.draw_networkx_edges(G, pos, width=[d['weight'] for (u, v, d) in G.edges(data=True)])\n",
-        "  nx.draw_networkx_labels(G, pos, font_size=10)\n",
-        "  plt.title(\"Trigram Network\")\n",
-        "  plt.show()\n",
-        "  ```\n",
+        "Distribution Plots:\n",
         "\n",
-        "### 3. **Applications of N-grams:**\n",
-        "\n",
-        "- **Text Summarization:** Trigrams and higher n-grams can help in identifying key phrases that frequently appear together, contributing to more meaningful summaries.\n",
-        "- **Sentiment Analysis:** Certain n-grams might carry sentiment more strongly (e.g., \"not very good\"), and analyzing these can improve sentiment analysis accuracy.\n",
-        "- **Language Modeling:** N-grams are used in probabilistic language models to predict the next word in a sequence."
+        "Histograms and Density Plots: Show the distribution of the frequencies of n-grams to understand their prevalence."
       ]
     },
     {
